@@ -22,7 +22,7 @@ import org.apache.log4j.Logger;
 /**
  * Tests the CertTools class .
  *
- * @version $Id: TestCertTools.java,v 1.2 2004-09-16 19:02:53 anatom Exp $
+ * @version $Id: TestCertTools.java,v 1.3 2004-11-05 08:42:27 anatom Exp $
  */
 public class TestCertTools extends TestCase {
     private static Logger log = Logger.getLogger(TestCertTools.class);
@@ -222,10 +222,10 @@ public class TestCertTools extends TestCase {
         String dn18 = "cn=jean,cn=EJBCA,dc=home,dc=jean";
         assertEquals(CertTools.stringToBCDNString(dn18), "CN=jean,CN=EJBCA,DC=home,DC=jean");
 
-        String dn19 = "C=SE, dc=dc1,DC=DC2,O=EJBCA, O=oo, cn=foo, cn=bar";
-        assertEquals(CertTools.stringToBCDNString(dn19), "CN=foo,CN=bar,O=EJBCA,O=oo,DC=dc1,DC=DC2,C=SE");
+        String dn19 = "cn=bar, cn=foo,o=oo, O=EJBCA,DC=DC2, dc=dc1, C=SE";
+        assertEquals(CertTools.stringToBCDNString(dn19), "CN=bar,CN=foo,O=oo,O=EJBCA,DC=DC2,DC=dc1,C=SE");
 
-        String dn20 = " C=SE,CN=\"foo, OU=bar\",  O=baz\\\\\\, quux  ";
+        String dn20 = " CN=\"foo, OU=bar\",  O=baz\\\\\\, quux,C=SE ";
         // BC always escapes with backslash, it doesn't use quotes.
         assertEquals(CertTools.stringToBCDNString(dn20), "CN=foo\\, OU=bar,O=baz\\\\\\, quux,C=SE");
 
@@ -360,4 +360,50 @@ public class TestCertTools extends TestCase {
         log.debug("<test08TestUnstructured()");
     }
 
+    /** Tests the reversing of a DN
+    *
+    * @throws Exception if error...
+    */
+   public void test09TestReverse() throws Exception {
+       log.debug(">test09TestReverse()");
+       // We try to examine the that we handle modern dc components for ldap correctly
+       String dn1 = "dc=com,dc=bigcorp,dc=se,ou=orgunit,ou=users,cn=Tomas G";
+       String dn2 = "cn=Tomas G,ou=users,ou=orgunit,dc=se,dc=bigcorp,dc=com";
+       assertTrue(CertTools.isDNReversed(dn1));
+       assertTrue(!CertTools.isDNReversed(dn2));
+       assertTrue(CertTools.isDNReversed("C=SE,CN=Foo"));
+       assertTrue(!CertTools.isDNReversed("CN=Foo,O=FooO"));
+       String revdn1 = CertTools.reverseDN(dn1);
+       log.debug("dn1: " + dn1);
+       log.debug("revdn1: " + revdn1);
+       assertEquals(dn2, revdn1);
+       
+       log.debug("<test09TestReverse()");
+   }
+    /** Tests the handling of DC components
+    *
+    * @throws Exception if error...
+    */
+   public void test10TestMultipleReversed() throws Exception {
+       log.debug(">test10TestMultipleReversed()");
+       // We try to examine the that we handle modern dc components for ldap correctly
+       String dn1 = "dc=com,dc=bigcorp,dc=se,ou=orgunit,ou=users,cn=Tomas G";
+       String bcdn1 = CertTools.stringToBCDNString(dn1);
+       log.debug("dn1: " + dn1);
+       log.debug("bcdn1: " + bcdn1);
+       assertEquals("CN=Tomas G,OU=users,OU=orgunit,DC=se,DC=bigcorp,DC=com", bcdn1);
+
+       String dn19 = "C=SE, dc=dc1,DC=DC2,O=EJBCA, O=oo, cn=foo, cn=bar";
+       assertEquals("CN=bar,CN=foo,O=oo,O=EJBCA,DC=DC2,DC=dc1,C=SE", CertTools.stringToBCDNString(dn19));
+       String dn20 = " C=SE,CN=\"foo, OU=bar\",  O=baz\\\\\\, quux  ";
+       // BC always escapes with backslash, it doesn't use quotes.
+       assertEquals("CN=foo\\, OU=bar,O=baz\\\\\\, quux,C=SE", CertTools.stringToBCDNString(dn20));
+
+       String dn21 = "C=SE,O=Foo\\, Inc, OU=Foo\\, Dep, CN=Foo\\'";
+       String bcdn21 = CertTools.stringToBCDNString(dn21);
+       assertEquals("CN=Foo\',OU=Foo\\, Dep,O=Foo\\, Inc,C=SE", bcdn21);        
+       assertEquals("CN=Foo/,OU=Foo\\, Dep,O=Foo\\, Inc,C=SE", StringTools.strip(bcdn21));        
+       log.debug("<test10TestMultipleReversed()");
+   }
+    
 }
